--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "google-auth-library": "^7.0.4",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
+    "nodemon": "^2.0.12",
     "uuid": "^8.3.2"
   }
 }
